--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -74,6 +74,18 @@ section:not(.greeting) {
   }
 }
 
+.container {
+  &.full-header-on {
+    .gnb,
+    .btn-full-header-show {
+      display: none;
+    }
+    .btn-full-header-hide {
+      display: block;
+    }
+  }
+}
+
 header {
   position: fixed;
   top: 0;
@@ -115,25 +127,166 @@ header {
         translate: 0 -2px;
       }
     }
-    .btn-full-header {
-      display: block;
-      padding: 0;
-      span {
-        line-height: 4px;
-        display: block;
-        &:not(:last-child) {
-          margin-bottom: 5px;
+    .full-header-buttons {
+      > button {
+        width: 22px;
+        height: 22px;
+        padding: 0;
+      }
+      .btn-full-header-show {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        span {
+          display: flex;
+          width: 100%;
+          justify-content: space-between;
+        }
+        i {
+          width: 4px;
+          height: 4px;
+          background-color: #000;
+          border-radius: 3px;
         }
       }
-      i {
-        display: inline-block;
-        width: 4px;
-        height: 4px;
-        background-color: #000;
-        border-radius: 3px;
-        &:nth-child(2) {
-          margin: 0 5px;
+      .btn-full-header-hide {
+        display: none;
+        position: relative;
+        i {
+          display: inline-block;
+          width: 100%;
+          height: 100%;
+          &::before,
+          &::after {
+            content: '';
+            @include absolute($t: 50%, $l: 50%);
+            display: inline-block;
+            width: 120%;
+            height: 2px;
+            background-color: $black;
+            translate: -50% -50%;
+          }
+          &::before {
+            rotate: 45deg;
+          }
+          &::after {
+            rotate: -45deg;
+          }
         }
+      }
+    }
+  }
+}
+.full-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $light-yellow;
+  display: flex;
+  z-index: 997;
+  justify-content: center;
+  align-items: center;
+  // transform: translateY(-100%);
+  .full-header-fake-bg {
+    @include absolute(0, 0, 0, 0);
+    background-color: #6d6d6d;
+    z-index: 998;
+  }
+  .full-header-content {
+    position: relative;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    .full-header-gnb {
+      li {
+        $font-size: 80px;
+        $arrow-margin-r: 10px;
+        $translateX: calc($font-size + $arrow-margin-r);
+
+        padding-right: $translateX;
+        font-family: $primary-kr--bold;
+        font-size: $font-size;
+        overflow: hidden;
+        &:not(:last-child) {
+          margin-bottom: 20px;
+        }
+        a {
+          position: relative;
+          display: inline-block;
+          i {
+            display: inline-block;
+            transition: transform 0.5s;
+            &::before {
+              content: '';
+              @include absolute($r: calc(100% + $arrow-margin-r), $t: 50%);
+              transform: translateY(-50%);
+              display: inline-block;
+              width: $font-size;
+              aspect-ratio: 1/1;
+              background-image: url(/src/images/header_arrow.png);
+              background-size: cover;
+              vertical-align: middle;
+            }
+            &:hover {
+              -webkit-text-stroke: 2px $black;
+              color: transparent;
+              transform: translateX($translateX);
+              transition: transform 0.5s;
+            }
+          }
+        }
+      }
+    }
+    address {
+      align-self: flex-end;
+      width: fit-content;
+      line-height: 1.5;
+      text-align: right;
+      overflow: hidden;
+      b {
+        display: block;
+        font-size: 20px;
+        font-weight: 500;
+      }
+      .tel-fax {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        span {
+          margin-top: 10px;
+        }
+      }
+    }
+    .full-header-icon {
+      @include absolute($t: 0, $r: 0);
+      width: 520px;
+      height: 340px;
+
+      &::before,
+      .rotate-v2,
+      &::after {
+        content: '';
+        display: inline-block;
+        background-size: cover;
+        aspect-ratio: 1/1;
+      }
+      &::before {
+        @include absolute($t: 0, $r: 30px);
+        width: 94px;
+        background-image: url(/src/images/header01_01.png);
+      }
+      .rotate-v2 {
+        @include absolute($t: 0, $l: 0);
+        width: 200px;
+        background-image: url(/src/images/header01_02.png);
+        filter: drop-shadow(5px 5px rgba($black, 0.1));
+      }
+      &::after {
+        @include absolute($b: 0, $r: 0);
+        width: 220px;
+        background-image: url(/src/images/header01_03.png);
       }
     }
   }
@@ -713,19 +866,20 @@ section.introduction {
       [class*='icon'] {
         display: inline-block;
         vertical-align: middle;
+        width: 100px;
         aspect-ratio: 1/1;
-        // margin: 0 20px;
+        margin: 0 30px;
+        background-size: cover;
       }
       .icon-clover {
-        width: 0;
-        margin: 0;
-        background: url(/src/images/section02_02.svg);
+        width: 70px;
+        background-image: url(/src/images/section02_02.svg);
       }
       .icon-earth {
-        background: url(/src/images/section02_03.png);
+        background-image: url(/src/images/section02_03.png);
       }
       .icon-link {
-        background: url(/src/images/section02_05.png);
+        background-image: url(/src/images/section02_05.png);
       }
     }
     a {
