--- a/pages/includes/header.html
+++ b/pages/includes/header.html
@@ -12,10 +12,13 @@
           <a href="/index.html"><img src="/src/images/logo.png" alt="" /></a>
         </div>
         <nav class="gnb">
-          <a href="">소개</a><a href="">Q&A</a><a href="">학생</a
-          ><a href="">교원</a><a href="">산업체</a>
+          <a href="/pages/introduction.html">소개</a
+          ><a href="/pages/qna.html">Q&A</a
+          ><a href="/pages/student.html">학생</a
+          ><a href="/pages/teacher.html">교원</a
+          ><a href="/pages/industry.html">산업체</a>
         </nav>
-        <a class="capstone" href=""
+        <a class="capstone btn-link" href=""
           >캡스톤디자인<i class="bi bi-box-arrow-up-right"></i
         ></a>
         <div class="full-header-buttons">
@@ -35,19 +38,19 @@
             <a href=""><i>홈</i></a>
           </li>
           <li>
-            <a href=""><i>소개</i></a>
+            <a href="/pages/introduction.html"><i>소개</i></a>
           </li>
           <li>
-            <a href=""><i>Q&A</i></a>
+            <a href="/pages/qna.html"><i>Q&A</i></a>
           </li>
           <li>
-            <a href=""><i>학생</i></a>
+            <a href="/pages/student.html"><i>학생</i></a>
           </li>
           <li>
-            <a href=""><i>교원</i></a>
+            <a href="/pages/teacher.html"><i>교원</i></a>
           </li>
           <li>
-            <a href=""><i>산업체</i></a>
+            <a href="/pages/industry.html"><i>산업체</i></a>
           </li>
         </ul>
         <address>
