--- a/src/styles/introduction.scss
+++ b/src/styles/introduction.scss
@@ -1,9 +1,5 @@
 @import 'fonts', 'common', 'reset', 'bootstrap-icons/font/bootstrap-icons.css';
 
-footer {
-  display: none;
-}
-
 [class*='inner'] {
   width: 1320px;
   margin: 0 auto;
@@ -15,40 +11,15 @@ footer {
   line-height: 1.2;
   .stroke {
     -webkit-text-stroke: 1px $black;
+    color: transparent;
   }
 }
 main {
-  padding-top: $header-height;
   background-color: $bg-orange;
-}
-.stroke {
-  color: transparent;
-}
-
-/* Add Class For Animation */
-[class*='anim'] {
-  opacity: 0;
-  &.active {
-    opacity: 1;
-    transition: 0.5s;
-  }
-}
-.anim-scale {
-  scale: 0;
-  &.active {
-    scale: 1;
-  }
-}
-.anim-xRight {
-  transform: translateX(-100%);
-  &.active {
-    transform: translateX(0);
-  }
-}
-.anim-xLeft {
-  transform: translateX(100%);
-  &.active {
-    transform: translateX(0);
+  &.green {
+    .center-intro-bg-icon .match-bg::after {
+      background-image: url(/src/images/center_deco05_2_c.png) !important;
+    }
   }
 }
 
@@ -58,6 +29,7 @@ main {
 section.center-intro {
   position: relative;
   overflow: hidden;
+  padding-top: 30px;
   .center-intro-bg-icon {
     @include absolute(0, 0, 0, 0);
 
@@ -72,9 +44,11 @@ section.center-intro {
       }
 
       @if ($i == 5) {
-        i:nth-child(#{$i})::after {
-          @include bg-icon-pseudo($width);
-          background-image: url('/src/images/center_deco0#{$i}_2.png');
+        i:nth-child(#{$i}) {
+          &::after {
+            @include bg-icon-pseudo($width);
+            background-image: url('/src/images/center_deco0#{$i}_2.png');
+          }
         }
       }
     }
@@ -108,10 +82,11 @@ section.center-intro {
         font-size: 200px;
         white-space: nowrap;
         font-family: $primary-kr--bold;
-        -webkit-text-stroke: 1px $light-yellow;
+        -webkit-text-stroke: 2px $light-yellow;
         color: transparent;
         text-align: center;
         text-transform: uppercase;
+        will-change: transform;
       }
       .center-list {
         position: relative;
@@ -141,12 +116,6 @@ section.center-intro {
  */
 section.infinite-phrase {
   overflow: hidden;
-  .to-right {
-    display: flex;
-    img {
-      justify-self: end;
-    }
-  }
   img {
     height: 120px;
   }
