--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,19 +4,13 @@
  * Common
  */
 [class*='inner'] {
-  width: 1920px;
+  width: 1800px;
   margin: 0 auto;
-}
-@media screen and (max-width: 1920px) {
-  [class*='inner'] {
-    width: 100%;
-    // padding: 0 20px;
-  }
 }
 
 main {
-  background-color: $bg-green;
   padding-top: 0;
+  overflow: hidden;
 }
 
 /*
@@ -191,9 +185,10 @@ section.slogan {
       border-top: 2px solid #161514;
     }
     .slogan-phrase-inner {
+      padding: 0 30px;
       [class*='slogan-text-wrap'] {
         display: inline-block;
-        font-size: 110px;
+        font-size: 100px;
         position: relative;
 
         > span {
@@ -205,7 +200,7 @@ section.slogan {
 
         .absolute {
           position: absolute;
-          // top: $padding-block;
+          top: 0;
           left: 0;
           z-index: 1;
         }
@@ -290,13 +285,13 @@ section.program-guide {
       text-transform: uppercase;
       font-weight: 700;
       letter-spacing: -0.05em;
-      .stroke {
+      .match-bg {
         text-shadow: text-shadow($black, 1);
       }
     }
     .letter-items {
       display: flex;
-      gap: 60px;
+      justify-content: space-between;
       margin-top: 70px;
       .letter-item {
         cursor: pointer;
@@ -305,6 +300,7 @@ section.program-guide {
         width: 560px;
         border: 2px solid $black;
         padding: 30px;
+        padding-bottom: 60px;
         &:nth-child(1) .letter-envelope {
           background-color: #f66219;
         }
@@ -316,8 +312,7 @@ section.program-guide {
         }
 
         .letter-content {
-          width: 435px;
-          margin: 0 auto;
+          padding-top: 70px;
           overflow: hidden;
           .letter-bubble {
             position: relative;
@@ -343,7 +338,7 @@ section.program-guide {
                 bottom: 0;
                 right: 0;
                 span {
-                  left: 35%;
+                  padding-left: 20px;
                 }
               }
               &:last-child {
@@ -358,7 +353,7 @@ section.program-guide {
             .letter-envelope {
               position: relative;
 
-              .letter-envelope-inner-img {
+              .letter-envelope-in-img {
                 display: none;
                 position: absolute;
                 bottom: 0;
@@ -409,10 +404,11 @@ section.program-guide {
                 top: 0;
                 left: 0;
                 font-family: $secondary-kr;
-                font-size: 20px;
-                padding: 60px 30px;
+                font-size: 22px;
+                padding: 90px 60px 0;
                 letter-spacing: -0.06em;
                 text-align: left;
+                word-break: keep-all;
                 span {
                   font-weight: 700;
                 }
@@ -423,7 +419,7 @@ section.program-guide {
                 }
                 a {
                   display: inline-block;
-                  font-size: 15px;
+                  font-size: 16px;
                   font-weight: 500;
                   padding: 10px 20px;
                   background-color: $black;
@@ -433,6 +429,9 @@ section.program-guide {
                     color: inherit;
                     display: inline-block;
                     margin-left: 5px;
+                  }
+                  &:hover .bi {
+                    transform: translateX(2px);
                   }
                 }
               }
@@ -455,7 +454,6 @@ section.introduction {
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     .circle {
       position: absolute;
       right: 0px;
@@ -582,81 +580,364 @@ section.introduction {
   }
 }
 
-/*
- *  Footer
- */
-footer {
-  background-color: $black;
-  height: 260px;
-  display: flex;
-  align-items: center;
-  * {
-    color: $light-yellow;
-    font-weight: 500;
-    letter-spacing: -0.05em;
+section.greeting {
+  .greeting-emoji {
+    transition: width 2s;
   }
-  .footer-inner {
-    .copyright-wrap {
-      display: flex;
-      margin-bottom: 40px;
-      .powered-by {
-        font-size: 14px;
-        opacity: 0.5;
-        margin-left: 50px;
-        b {
-          font-weight: bold;
+}
+
+@media screen and (max-width: 1800px) {
+  @function vw($px-vw, $base-vw: 1800px) {
+    @return ($px-vw * 100vw) / $base-vw;
+  }
+
+  [class*='inner'] {
+    width: 100%;
+    padding: 0 30px !important;
+  }
+
+  section.greeting {
+    .greeting-inner {
+      .greeting-center {
+        width: max(vw(680px), 550px);
+      }
+      .greeting-emoji {
+        width: 85%;
+
+        .top-left-emoji {
+          .img-wrap:nth-child(1) {
+            width: vw(120px);
+          }
+          .img-wrap:nth-child(2) {
+            top: vw(25px);
+            left: vw(90px);
+            width: vw(175px);
+          }
+        }
+        .top-right-emoji {
+          .img-wrap:nth-child(1) {
+            right: vw(80px);
+            width: vw(190px);
+          }
+          .img-wrap:nth-child(2) {
+            top: vw(90px);
+            width: vw(111px);
+          }
+        }
+        .bottom-left-emoji {
+          .img-wrap:nth-child(1) {
+            width: vw(120px);
+          }
+        }
+        .bottom-right-emoji {
+          .img-wrap:nth-child(1) {
+            right: vw(115px);
+            width: vw(121px);
+          }
+          .img-wrap:nth-child(2) {
+            width: vw(184px);
+          }
         }
       }
-      .related-site {
-        position: relative;
-        width: 210px;
-        margin-left: auto;
-        span {
-          cursor: pointer;
-          display: flex;
-          justify-content: space-between;
-          .bi {
-            transform: rotate(0);
-            transition: transform 0.2s;
+    }
+  }
+
+  /*
+ *  Section : Slogan
+ */
+  section.slogan {
+    .slogan-phrase {
+      .slogan-phrase-inner {
+        [class*='slogan-text-wrap'] {
+          font-size: vw(100px);
+          > span {
+            height: vw(190px);
+            line-height: vw(190px);
           }
         }
-        &.active {
-          span {
-            opacity: 0.5;
-            .bi {
-              transform: rotate(180deg);
-              transition: transform 0.2s;
-            }
+        .slogan-text-wrap-01 {
+          margin-right: vw(55px);
+          .icon-arrow-right {
+            width: vw(110px);
+            margin: 0 vw(60px);
           }
         }
-        .site-link-list {
-          display: none;
-          position: absolute;
-          bottom: calc(100% + 20px);
-          left: 0;
-          width: 100%;
-          background-color: $light-yellow;
-          padding: 15px;
-          box-shadow: 5px 5px rgba($black, 0.1);
-          font-size: 14px;
-          li {
-            a {
-              display: block;
-              color: $black;
-              &:hover {
-                text-decoration: underline;
+        .slogan-text-wrap-03 {
+          margin-right: vw(55px);
+          .icon-star {
+            width: vw(95px);
+            margin-right: vw(40px);
+          }
+        }
+        .slogan-text-wrap-04 {
+          .linc {
+            margin-left: vw(55px);
+            padding: vw(20px) vw(30px);
+          }
+        }
+      }
+    }
+  }
+
+  /*
+ *  Section : Program Guide
+ */
+  section.program-guide {
+    .program-guide-inner {
+      .letter-items {
+        $gap: vw(60px);
+        .letter-item {
+          font-size: vw(30px);
+          width: 32%;
+          .letter-content {
+            .letter-bubble {
+              height: vw(217px);
+              .img-wrap {
+                height: vw(160px);
               }
             }
-            &:not(:last-child) {
-              margin-bottom: 14px;
+            .letter {
+              .letter-paper {
+                width: calc(100% - vw(50px));
+
+                .letter-paper-text {
+                  font-size: max(vw(22px), 15px);
+                  padding: 15% 20%;
+                  a {
+                    font-size: max(vw(16px), 12px);
+                  }
+                }
+              }
             }
           }
         }
       }
     }
-    address {
-      font-size: 14px;
-      line-height: 1.5;
+  }
+
+  /*
+ *  Section : Introduction
+ */
+  section.introduction {
+    .introduction-bg {
+      * {
+        transition: 0.4s;
+      }
+      .circle {
+        i {
+          font-size: vw(25px);
+        }
+        &::before {
+          width: vw(800px);
+          bottom: vw(-70px);
+        }
+      }
+      .top-left {
+        top: -50px;
+        left: 10px;
+        width: vw(220px);
+      }
+      .bottom-left {
+        width: vw(300px);
+      }
+    }
+    .introduction-content {
+      font-size: vw(110px);
+      padding-top: vw(110px);
+      .introduction-phrase {
+        [class*='icon'] {
+          width: vw(100px);
+          margin: 0 vw(30px);
+        }
+        .icon-clover {
+          width: vw(70px);
+        }
+      }
+      a {
+        font-size: vw(30px);
+        width: vw(300px);
+        height: vw(100px);
+        line-height: vw(100px);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  @function vw($px-vw, $base-vw: 1024px) {
+    @return ($px-vw * 100vw) / $base-vw;
+  }
+
+  .full-header {
+    .full-header-content {
+      .full-header-icon {
+        width: vw(520px);
+        height: vw(340px);
+        &::before {
+          right: vw(30px);
+          width: vw(94px);
+        }
+        .rotate-v2 {
+          width: vw(200px);
+        }
+        &::after {
+          width: vw(220px);
+        }
+      }
+      .full-header-gnb {
+        li {
+          font-size: vw(80px);
+        }
+      }
+    }
+  }
+
+  section.greeting {
+    .greeting-inner {
+      .greeting-emoji {
+        .top-left-emoji {
+          .img-wrap:nth-child(1) {
+            width: vw(100px);
+          }
+          .img-wrap:nth-child(2) {
+            width: vw(150px);
+            top: vw(40px);
+            left: vw(70px);
+          }
+        }
+        .top-right-emoji {
+          .img-wrap:nth-child(1) {
+            right: vw(60px);
+            width: vw(160px);
+          }
+          .img-wrap:nth-child(2) {
+            width: vw(90px);
+            top: vw(80px);
+          }
+        }
+        .bottom-left-emoji {
+          .img-wrap:nth-child(1) {
+            width: vw(100px);
+          }
+        }
+        .bottom-right-emoji {
+          .img-wrap:nth-child(1) {
+            width: vw(100px);
+            right: vw(115px);
+          }
+          .img-wrap:nth-child(2) {
+            width: vw(170px);
+          }
+        }
+      }
+    }
+  }
+
+  section.program-guide {
+    .program-guide-inner {
+      .program-guide-title {
+        font-size: vw(90px);
+      }
+      .letter-items {
+        flex-direction: column;
+        gap: 30px;
+        .letter-item {
+          width: 100%;
+          font-size: 18px;
+          padding: 30px 0;
+          .card-header {
+            padding: 0 20px;
+            .card-fake-btns {
+              i {
+                width: 25px;
+                height: 25px;
+                font-size: 22px;
+                &::before {
+                  line-height: 25px;
+                }
+                &:not(:last-child) {
+                  margin-right: 3px;
+                }
+              }
+            }
+          }
+          .letter-content {
+            width: 270px;
+            margin: 0 auto;
+            padding-top: 40px;
+            .letter-bubble {
+              height: 140px;
+              .img-wrap {
+                height: 100px;
+                &:first-child {
+                  span {
+                    padding-left: 32px;
+                  }
+                }
+              }
+              .bubble-text {
+              }
+            }
+            .letter {
+              .letter-paper {
+                .letter-paper-text {
+                  font-size: 18px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  @function vw($px-vw, $base-vw: 768px) {
+    @return ($px-vw * 100vw) / $base-vw;
+  }
+
+  section:not(.greeting) {
+    padding-bottom: 100px;
+  }
+
+  section.greeting {
+    .greeting-bg-text {
+      .text-wrap {
+        padding: 20px 0;
+        span {
+          font-size: vw(200px);
+        }
+      }
+    }
+  }
+  section.slogan {
+    .slogan-phrase {
+      border-bottom: none;
+      .slogan-phrase-inner {
+        padding: 0 !important;
+        [class*='slogan-text-wrap'] {
+          display: block;
+          border-bottom: 2px solid $black;
+          margin-right: 0;
+          padding: vw(20px) vw(100px);
+          font-size: vw(60px);
+          > span {
+            transform: translateY(0);
+            height: auto;
+            line-height: 1;
+          }
+          .absolute {
+            display: block;
+            width: 100%;
+            padding: inherit;
+            background-color: $light-yellow;
+          }
+        }
+      }
+      .slogan-phrase-bg {
+        display: none;
+      }
     }
   }
 }
