인덱스 애니메이션 수정

--- a/pages/includes/header.html
+++ b/pages/includes/header.html
@@ -33,26 +33,32 @@
     <div class="full-header">
       <div class="full-header-fake-bg"></div>
       <div class="full-header-content">
-        <ul class="full-header-gnb">
-          <li>
-            <a href=""><i>홈</i></a>
-          </li>
-          <li>
-            <a href="/pages/introduction.html"><i>소개</i></a>
-          </li>
-          <li>
-            <a href="/pages/qna.html"><i>Q&A</i></a>
-          </li>
-          <li>
-            <a href="/pages/student.html"><i>학생</i></a>
-          </li>
-          <li>
-            <a href="/pages/teacher.html"><i>교원</i></a>
-          </li>
-          <li>
-            <a href="/pages/industry.html"><i>산업체</i></a>
-          </li>
-        </ul>
+        <div class="full-header-gnb-wrap">
+          <div class="full-header-icon"><i class="rotate-v2"></i></div>
+          <ul class="full-header-gnb">
+            <li>
+              <a href=""><i>홈</i></a>
+            </li>
+            <li>
+              <a href="/pages/introduction.html"><i>소개</i></a>
+            </li>
+            <li>
+              <a href="/pages/qna.html"><i>Q&A</i></a>
+            </li>
+            <li>
+              <a href="/pages/student.html"><i>학생</i></a>
+            </li>
+            <li>
+              <a href="/pages/teacher.html"><i>교원</i></a>
+            </li>
+            <li>
+              <a href="/pages/industry.html"><i>산업체</i></a>
+            </li>
+          </ul>
+          <a class="capstone btn-link" href=""
+            >캡스톤디자인<i class="bi bi-box-arrow-up-right"></i
+          ></a>
+        </div>
         <address>
           <div class="address-content">
             <div class="address">
@@ -66,7 +72,6 @@
             </div>
           </div>
         </address>
-        <div class="full-header-icon"><i class="rotate-v2"></i></div>
       </div>
     </div>
   </body>
